src/github.com/ebay/akutan/query/parser/testdata/insert/errors/string_lit_nil_start.res
parser: error parsing as legacy query: unable to parse query: line 1 column 37: expected string literal to not contain a nil